# rdts

./: LICENSE.md  README.md  rdtscli.py  requirements.txt  setup.cfg  trigtimer.py  version.py
rdts/: rdts_cliserv.py  rdts_timer.py  version.py
rsrc/: rdts.kicad_sch  rdts_part_list.ods
