[metadata]
name = rdts
version = attr: rdts.version.__version__
author = xaratustrah
url = https://github.com/xaratustrah/rdts
description = Distributed trigger system using Raspberry Pi
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Physics, Data, Time series, Data analysis
license = GPLv3
license_files = LICENSE
classifiers =
    Environment :: Console
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3 :: Only
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Topic :: Scientific/Engineering :: Physics
    Intended Audience :: Science/Research

[options]
python_requires = >=3.7, <4
packages = find:

[options.entry_points]
console_scripts = 
    rdts_cliserv = rdts.rdts_cliserv:main
    rdts_timer = rdts.rdts_timer:main